client/components/navigation/Hamburger.module.css
.menuList {
  list-style: none;
  flex-direction: column;
  text-align: center;
  margin: 0;
  padding: 0;
  position: fixed;
  top: 8.5%;
  z-index: 1;
  left: 0;
  width: 100%;
  height: calc(100% - 4rem);
  background-color: rgba(0, 0, 0, 1);
}

.navLink {
  text-decoration: none;
  position: relative;
  color: ghostwhite;
}

.navLink::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #e0bf9f;
  visibility: hidden;
  transform: scaleX(0);
  transition: all 0.3s ease-in-out 0s;
}

.navLink:hover::before {
  color: #e0bf9f;
  visibility: visible;
  transform: scaleX(1);
}

.navLinkActive {
  border-bottom: 2px solid #e0bf9f;
  color: inherit;
}

